--- a/backend/package.json
+++ b/backend/package.json
@@ -6,8 +6,10 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.12.1",
     "mssql": "^11.0.1",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "dev": "bun run server.ts",
