--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,11 +13,15 @@
     "@tailwindcss/vite": "^4.0.7",
     "@tanstack/react-table": "^8.21.2",
     "axios": "^1.7.9",
+    "chart.js": "^4.4.8",
     "emailjs-com": "^3.2.0",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-leaflet": "^5.0.0",
     "react-router": "^7.2.0",
+    "react-router-dom": "^7.3.0",
+    "react-select": "^5.10.0",
     "recharts": "^2.15.1",
     "tailwindcss": "^4.0.7"
   },
@@ -33,6 +37,7 @@
     "globals": "^15.14.0",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.22.0",
-    "vite": "^6.1.0"
+    "vite": "^6.1.0",
+    "vite-tsconfig-paths": "^5.1.4"
   }
 }
