--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,20 +10,25 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@azure/storage-blob": "^12.26.0",
     "@tailwindcss/vite": "^4.0.7",
     "@tanstack/react-table": "^8.21.2",
     "axios": "^1.7.9",
     "chart.js": "^4.4.8",
     "emailjs-com": "^3.2.0",
+    "jwt-decode": "^4.0.0",
+    "papaparse": "^5.5.2",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
     "react-router": "^7.2.0",
     "react-router-dom": "^7.3.0",
     "react-select": "^5.10.0",
     "recharts": "^2.15.1",
-    "tailwindcss": "^4.0.7"
+    "tailwindcss": "^4.0.7",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
