--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
     "mongoose": "^8.12.1",
     "mssql": "^11.0.1",
     "multer": "^1.4.5-lts.1",
+    "uuid": "^11.1.0",
     "xlsx": "^0.18.5"
   },
   "scripts": {
