--- a/backend/package.json
+++ b/backend/package.json
@@ -1,21 +1,28 @@
 {
   "dependencies": {
     "@azure/storage-blob": "^12.26.0",
+    "azure-storage": "^2.10.7",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "csv-parser": "^3.2.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "formidable": "^3.5.2",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "mongoose": "^8.12.1",
     "mssql": "^11.0.1",
     "multer": "^1.4.5-lts.1",
+    "react-modal": "^3.16.3",
     "uuid": "^11.1.0",
     "xlsx": "^0.18.5"
   },
   "scripts": {
     "dev": "bun run server.ts",
     "start": "bun run server.ts"
+  },
+  "devDependencies": {
+    "@types/mssql": "^9.1.7",
+    "@types/multer": "^1.4.12"
   }
 }
