--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,13 @@
   },
   "dependencies": {
     "@azure/storage-blob": "^12.26.0",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@tailwindcss/vite": "^4.0.7",
     "@tanstack/react-table": "^8.21.2",
     "axios": "^1.7.9",
+    "azure-storage": "^2.10.7",
     "chart.js": "^4.4.8",
     "emailjs-com": "^3.2.0",
     "jwt-decode": "^4.0.0",
@@ -21,11 +25,14 @@
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
+    "react-fontawesome": "^1.7.1",
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
+    "react-modal": "^3.16.3",
     "react-router": "^7.2.0",
     "react-router-dom": "^7.3.0",
     "react-select": "^5.10.0",
+    "react-toastify": "^11.0.5",
     "recharts": "^2.15.1",
     "tailwindcss": "^4.0.7",
     "xlsx": "^0.18.5"
@@ -35,6 +42,7 @@
     "@types/node": "^22.13.5",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
+    "@types/react-modal": "^3.16.3",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.19.0",
     "eslint-plugin-react-hooks": "^5.0.0",
