--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "framer-motion": "^12.5.0",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.479.0",
+    "papaparse": "5.5.2",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
@@ -35,7 +36,8 @@
     "react-router-dom": "^7.3.0",
     "react-select": "^5.10.0",
     "recharts": "^2.15.1",
-    "tailwindcss": "^4.0.7"
+    "tailwindcss": "^4.0.7",
+    "xlsx": "0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
