--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,9 @@
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@mui/icons-material": "^6.4.8",
+    "@mui/material": "^6.4.8",
+    "@mui/x-data-grid": "^7.28.1",
     "@tailwindcss/vite": "^4.0.7",
     "@tanstack/react-table": "^8.21.2",
     "axios": "^1.7.9",
