--- a/backend/package.json
+++ b/backend/package.json
@@ -3,6 +3,7 @@
     "@azure/storage-blob": "^12.26.0",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "csv-parser": "^3.2.0",
     "dotenv": "^16.4.7",
