--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "framer-motion": "^12.5.0",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.479.0",
+    "node-fetch": "^3.3.2",
     "papaparse": "5.5.2",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
