--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.14.0",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@heroicons/react": "^2.2.0",
     "@mui/icons-material": "^6.4.7",
     "@mui/material": "^6.4.7",
     "@mui/styled-engine": "^6.4.6",
@@ -24,9 +25,11 @@
     "chart.js": "^4.4.8",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^12.5.0",
+    "install": "^0.13.0",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.479.0",
     "node-fetch": "^3.3.2",
+    "npm": "^11.2.0",
     "papaparse": "5.5.2",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
