--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "@tailwindcss/vite": "^4.0.7",
     "@tanstack/react-table": "^8.21.2",
     "axios": "^1.7.9",
+    "bootstrap": "^5.3.3",
     "chart.js": "^4.4.8",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^12.5.0",
@@ -31,6 +32,7 @@
     "npm": "^11.2.0",
     "papaparse": "5.5.2",
     "react": "^19.0.0",
+    "react-bootstrap": "^2.10.9",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
@@ -39,6 +41,7 @@
     "react-router-dom": "^7.3.0",
     "react-select": "^5.10.0",
     "recharts": "^2.15.1",
+    "swiper": "^11.2.6",
     "tailwindcss": "^4.0.7",
     "xlsx": "0.18.5"
   },
